// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentFooter it matches snapshot when both footer and footer_icon are provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginTop": 5,
    }
  }
>
  <FastImage
    key="footer_icon"
    source={
      Object {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      Object {
        "height": 12,
        "marginRight": 5,
        "marginTop": 1,
        "width": 12,
      }
    }
  />
  <Text
    ellipsizeMode="tail"
    key="footer_text"
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(61,60,64,0.5)",
        "fontSize": 11,
      }
    }
  >
    This is the footer!
  </Text>
</View>
`;

exports[`AttachmentFooter it matches snapshot when footer text is provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginTop": 5,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    key="footer_text"
    numberOfLines={1}
    style={
      Object {
        "color": "rgba(61,60,64,0.5)",
        "fontSize": 11,
      }
    }
  >
    This is the footer!
  </Text>
</View>
`;
